--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -125,7 +125,7 @@ Contracts are especially useful if you want to expose a subset of your supergrap
 
 You can integrate GraphOS with your organization's identity provider (IdP) to enable single sign-on (SSO) for [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
-SSO configuration is available for all the following:
+SSO configuration is available for the following:
 
 - [Okta](../org/sso/okta-integration-guide/)
 - [Azure AD](../org/sso/azure-ad-integration-guide/)
