--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -142,7 +142,7 @@ Generate an [integration key](https://support.pagerduty.com/docs/generating-api-
 
 3. Click **Done**.
 
-### Custom webhooks
+### Custom webhooks (enterprise only)
 
 <EnterpriseFeature />
 
