--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -52,23 +52,25 @@ Note that it takes about 10 to 15 minutes before a performed action can appear i
 
 An exported audit log is a CSV file in which each row represents a material change to your Studio organization. Columns contain the following information:
 
-| Column           | Description                                                                                                                                                                           |
-| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `Timestamp`      | The time when the action occurred.                                                                                                                                                    |
-| `Action`         | The type of action that occurred. Possible values are listed in [Audited actions](#audited-actions).                                                                                  |
-| `Resource_ID`    | The ID of the resource that was acted on.                                                                                                                                             |
-| `Resource_Type`  | The type of resource that was acted on. Possible values are listed in [Resource types](#resource-types).                                                                              |
-| `Details`        | A JSON object containing details of the action that occurred. The fields of this object vary depending on the action.                                                                 |
-| `Actor_ID`       | The Studio ID of the actor that performed the action.                                                                                                                                 |
-| `Actor_Type`     | The type of actor that performed the action. This is most commonly `USER` (an authenticated user) or `GRAPH` (a tool such as the Rover CLI using a graph API key).                    |
-| `Effective_Role` | The [organizational role](./members/#organization-wide-member-roles) of the actor that performed the action, indicating its corresponding [permissions](./members/#role-permissions). |
-| `Actor_Email`    | The actor's email address, if the actor is a `USER`.                                                                                                                                  |
-| `Actor_Name`     | The actor's name, if the actor is a `USER`.                                                                                                                                           |
-| `Graph_ID`       | The ID of the Studio graph that the action pertains to, if any.                                                                                                                       |
+<!-- vale Vale.Spelling = NO -->
+
+| Column             | Description                                                                                                                                                                           |
+| ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Timestamp**      | The time when the action occurred.                                                                                                                                                    |
+| **Action**         | The type of action that occurred. Possible values are listed in [Audited actions](#audited-actions).                                                                                  |
+| **Resource_ID**    | The ID of the resource that was acted on.                                                                                                                                             |
+| **Resource_Type**  | The type of resource that was acted on. Possible values are listed in [Resource types](#resource-types).                                                                              |
+| **Details**        | A JSON object containing details of the action that occurred. The fields of this object vary depending on the action.                                                                 |
+| **Actor_ID**       | The Studio ID of the actor that performed the action.                                                                                                                                 |
+| **Actor_Type**     | The type of actor that performed the action. This is most commonly `USER` (an authenticated user) or `GRAPH` (a tool such as the Rover CLI using a graph API key).                    |
+| **Effective_Role** | The [organizational role](./members/#organization-wide-member-roles) of the actor that performed the action, indicating its corresponding [permissions](./members/#role-permissions). |
+| **Actor_Email**    | The actor's email address, if the actor is a `USER`.                                                                                                                                  |
+| **Actor_Name**     | The actor's name, if the actor is a `USER`.                                                                                                                                           |
+| **Graph_ID**       | The ID of the Studio graph that the action pertains to, if any.                                                                                                                       |
 
 ## Resource types
 
-An audit log's `Resource_Type` column indicates what type of resource each action was performed _on_. Possible values are listed below.
+An audit log's **Resource_Type** column indicates what type of resource each action was performed _on_. Possible values are listed below.
 
 | Resource type        | Description                                       |
 | -------------------- | ------------------------------------------------- |
@@ -85,7 +87,9 @@ An audit log's `Resource_Type` column indicates what type of resource each actio
 
 ## Audited actions
 
-The `Action` column of an audit log indicates the type of each action that was performed. Possible values are listed below.
+The **Action** column of an audit log indicates the type of each action that was performed. Possible values are listed below.
+
+<!-- vale Vale.Spelling = YES -->
 
 <Note>
 
