Update landing page description

--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -4,9 +4,7 @@ title: Apollo Tech Notes
 
 import { AllNotes } from "../../components/TechNotes";
 
-This documentation set provides technical articles on specialized topics for Apollo tools and libraries.
-
-Select a tag to view a list of articles on the corresponding topic.
+This documentation set provides technical articles on specialized topics for Apollo tools and libraries. Select a tag to view a list of articles on the corresponding topic. Click **Note**, **Published**, or **Updated** to sort articles by title, publish date, or update date, respectively.
 
 <AllNotes />
 
