--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -4,13 +4,13 @@ title: Apollo Tech Notes
 
 import { AllNotes } from "../../components/TechNotes";
 
-This documentation set provides technical articles on specialized topics for Apollo tools and libraries. Select a tag to view a list of articles on the corresponding topic. Click **Note**, **Published**, or **Updated** to sort articles by title, publish date, or update date, respectively.
+This documentation set provides technical articles on specialized topics for Apollo tools and libraries. Select a tag to view all articles on the corresponding topic. Click **Note**, **Published**, or **Updated** to sort articles by title, publish date, or update date, respectively.
 
 <AllNotes />
 
 ## Reporting issues
 
-If you find an issue with a tech note, feel free to use the **Edit on GitHub** button to create a new PR with the suggested changes. Otherwise, you can view the source and create a GitHub issue on the [apollographql/docs](https://github.com/apollographql/docs) repo.
+If you find an issue with a tech note, feel free to use the **Edit on GitHub** button to create a PR with the suggested changes. Otherwise, you can view the source and create a GitHub issue on the [apollographql/docs](https://github.com/apollographql/docs) repo.
 
 ## Adding new tech notes
 
