--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -1,7 +1,8 @@
 ---
 title: Schema naming conventions
 id: TN0002
-description: Conventions for naming types, fields, and arguments in your GraphQL schema.
+subtitle: Naming conventions and considerations for types, fields, and arguments in your GraphQL schema
+description:  Learn naming and casing conventions for GraphQL schema types, fields, and arguments and how to enforce them with GraphOS.
 published: 2023-06-03
 tags: [schema-design]
 ---
