--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -1,6 +1,7 @@
 ---
 title: Authenticating requests with the Apollo Router
-description: When using the Apollo Router as the entry point to your federated supergraph, you can combine strategies to handle a number of authentication requirements and practice "defense-in-depth".
+subtitle: Use authorization and authentication strategies to secure your graph
+description: Combine authorization and authentication strategies with the Apollo Router to secure your graph through defense in depth.
 published: 2022-06-13
 id: TN0004
 tags: [server, router, auth]
