--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -1,9 +1,10 @@
 ---
 title: Production readiness checklist
-description: We recommend that you read through this checklist and identify critical features for your team before your supergraph begins handling production traffic.
+subtitle: Use this checklist to identify potential gaps before your graph handles production traffic
+description: Use this checklist—covering the Apollo Router, subgraphs, and clients—to identify potential gaps before your graph handles production traffic.
 published: 2022-07-11
 id: TN0008
-tags: [sre, router, server, client]
+tags: [sre, router, server, client, best-practices]
 ---
 
 We recommend that you read through this checklist and identify critical features for your team before your supergraph begins handling production traffic.
