--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -1,6 +1,7 @@
 ---
 title: Testing with Apollo Federation
-description: Testing in GraphQL can involve many areas of your tech stack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastructure with your Apollo Router to the individual subgraphs in your supergraph.
+subtitle: Unit, integration, end-to-end, composition, and component and operation testing
+description: Test your GraphQL architecture comprehensively with unit, integration, end-to-end, composition, and component and operation testing. 
 published: 2022-07-12
 id: TN0007
 tags: [client, server, federation, testing]
